# vdecode

./: .gitignore  CMakeLists.txt  main.cxx  read.cxx
include/: WaveReader.hh
run/: VPlot.py  do.sh  draw.cxx  list.txt  list_amp.txt  test.cxx
run/100hz_7v/: test.cxx
run/ETest/: dfit.cxx
run/ETest/vibrate_after_x/: VPlot.py  draw.cxx
run/freq/: VPlot.py
run/magnitude/: Plot.py  VPlot.py
src/: MixReader.cc  TempReader.cc  WaveReader.cc
